--- a/subjects/maths.html
+++ b/subjects/maths.html
@@ -16,6 +16,9 @@
   <script>
     subject = "maths";
     template={"learnt":"0%","consolidated":"0%", "topicsLearnt": {"1":false, "2":false, "3":false, "4":false, "5":false, "6":false, "7":false, "8":false, "9":false, "10":false, "11":false, "12":false, "13":false, "14":false, "15":false, "16":false, "17":false, "18":false, "19":false, "20":false},"topicsConsolidated": {"1":false, "2":false, "3":false, "4":false, "5":false, "6":false, "7":false, "8":false, "9":false, "10":false, "11":false, "12":false, "13":false, "14":false, "15":false, "16":false, "17":false, "18":false, "19":false, "20":false}};
+    window.onbeforeunload = function () {
+    return "Are you sure";
+    };
   </script>
 
 <body>
