--- a/quickstart.html
+++ b/quickstart.html
@@ -19,7 +19,7 @@
 
     <div class="mainContent">
       <h1 style="text-align: center">How To Website</h1>
-      <ol style="font-size:20px">
+      <ol style="font-size:20px; width:50%; margin:auto">
         <li>PLEASE USE A COMPUTER - viewing this website on a phone looks awful and if you try and use the progress trackers the website shouts at you.</li>
         <li>On the home page, click the shiny 'Download Template' button to get started, which will download a file called <b>progress.txt</b>. Make sure you know where on your computer it's downloaded to:</li>
           <ul>
