--- a/subjects/maths.html
+++ b/subjects/maths.html
@@ -361,7 +361,7 @@
       <a target="_blank" href="https://2017.integralmaths.org/my/index.php" ><button>MEI Maths Website</button></a>
       <div class="br"></div>
       <h3>Physics and Maths Tutor</h3>
-      <a target="_blank" href="https://2017.integralmaths.org/my/index.php" ><button class="smallerButton">MEI Maths Website</button></a>
+      <a target="_blank" href="https://www.physicsandmathstutor.com/maths-revision/" ><button class="smallerButton">Maths Homepage</button></a>
     </div>
 
   </div>
