--- a/subjects/maths.html
+++ b/subjects/maths.html
@@ -50,7 +50,7 @@
     <div class="uploadWrapper">
       <button onclick="uploadClick()">Upload Progress</button>
       <input type="file" id="uploadInput" onchange="fileSetup(event)" hidden />
-      <button onclick="download()">Save Progress</button>
+      <button disabled="true" id="uploadButton" onclick="download()">Save Progress</button>
     </div>
 
       <div class="topics">
@@ -359,9 +359,19 @@
       <h2>Resources</h2>
       <a target="_blank" href="https://www.ocr.org.uk/Images/308740-specification-accredited-a-level-gce-mathematics-b-mei-h640.pdf" ><button>OCR MEI Specification</button></a>
       <a target="_blank" href="https://2017.integralmaths.org/my/index.php" ><button>MEI Maths Website</button></a>
+      <a target="_blank" href="https://mei.org.uk/alevelpapers" ><button>MEI Past Papers</button></a>
+
       <div class="br"></div>
+
       <h3>Physics and Maths Tutor</h3>
       <a target="_blank" href="https://www.physicsandmathstutor.com/maths-revision/" ><button class="smallerButton">Maths Homepage</button></a>
+
+      <div class="br"></div>
+      <a target="_blank" href="https://www.physicsandmathstutor.com/maths-revision/a-level-core-1/solomon-worksheets/" ><button class="smallerButton">C1 Worksheets</button></a>
+      <a target="_blank" href="https://www.physicsandmathstutor.com/maths-revision/a-level-core-2/solomon-worksheets/" ><button class="smallerButton">C2 Worksheets</button></a>
+      <a target="_blank" href="https://www.physicsandmathstutor.com/maths-revision/a-level-core-3/solomon-worksheets/" ><button class="smallerButton">C3 Worksheets</button></a>
+      <a target="_blank" href="https://www.physicsandmathstutor.com/maths-revision/a-level-core-3/solomon-worksheets/" ><button class="smallerButton">C4 Worksheets</button></a>
+
     </div>
 
   </div>
