--- a/subjects.html
+++ b/subjects.html
@@ -27,10 +27,12 @@
         </div>
       </a>
 
-      <div class="subject">
-        <img src="./images/further-maths.jpg" />
-        <figcaption>Further Maths</figcaption>
-      </div>
+      <a href="subjects/physics.html">
+        <div class="subject">
+          <img src="./images/physics.jpg" />
+          <figcaption>Physics</figcaption>
+        </div>
+      </a>
 
     </div>
   </body>
