--- a/subjects.html
+++ b/subjects.html
@@ -20,6 +20,13 @@
     <div class="mainContent" style="text-align: center">
       <h1>MORE ON THE WAY</h1>
 
+      <a href="subjects/electronics.html">
+        <div class="subject">
+          <img src="images/electronics.jpg" />
+          <figcaption>Electronics</figcaption>
+        </div>
+      </a>
+
       <a href="subjects/maths.html">
         <div class="subject">
           <img class="subject-image" src="images/maths.jpg" />
@@ -29,7 +36,7 @@
 
       <a href="subjects/physics.html">
         <div class="subject">
-          <img src="./images/physics.jpg" />
+          <img src="images/physics.jpg" />
           <figcaption>Physics</figcaption>
         </div>
       </a>
