--- a/subjects.html
+++ b/subjects.html
@@ -20,6 +20,20 @@
     <div class="mainContent" style="text-align: center">
       <h1>MORE ON THE WAY</h1>
 
+      <a href="subjects/biology.html">
+        <div class="subject">
+          <img src="images/biology.jpg" />
+          <figcaption>Biology</figcaption>
+        </div>
+      </a>
+
+      <a href="subjects/chemistry.html">
+        <div class="subject">
+          <img src="images/chemistry.jpg" />
+          <figcaption>Chemistry</figcaption>
+        </div>
+      </a>
+
       <a href="subjects/electronics.html">
         <div class="subject">
           <img src="images/electronics.jpg" />
@@ -42,5 +56,6 @@
       </a>
 
     </div>
+    <div class="footer"></div>
   </body>
 </html>
