--- a/subjects.html
+++ b/subjects.html
@@ -34,6 +34,13 @@
         </div>
       </a>
 
+      <a href="subjects/economics.html">
+        <div class="subject">
+          <img src="images/economics.jpg" />
+          <figcaption>Economics</figcaption>
+        </div>
+      </a>
+
       <a href="subjects/electronics.html">
         <div class="subject">
           <img src="images/electronics.jpg" />
