Adding computer science

--- a/subjects.html
+++ b/subjects.html
@@ -34,6 +34,13 @@
         </div>
       </a>
 
+      <a href="subjects/computer-science.html">
+        <div class="subject">
+          <img src="images/computer-science.jpg" />
+          <figcaption>Computer Science</figcaption>
+        </div>
+      </a>
+
       <a href="subjects/economics.html">
         <div class="subject">
           <img src="images/economics.jpg" />
