Making the quick-start clearer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h4 style="text-align: right">- Luke Amos, Editor of Awesomeness</h4>
       </div>
 
-      <div style="text-align:center"><button style="width:250px" onclick="downloadTemplate()">Download Template</button></div>
+      <h3 style="text-align:center">To start, take a look at the <b>Quick Start Guide</b> section.</h3>
     
     </div>
 
