--- a/quickstart.html
+++ b/quickstart.html
@@ -21,16 +21,21 @@
       <h1 style="text-align: center">Progress Tracker How-To</h1>
       <ol style="font-size:20px; width:50%; margin:auto">
         <li>PLEASE USE A COMPUTER - viewing this website on a phone looks awful and if you try and use the progress trackers it shouts at you.</li>
-        <li>On the home page, click the shiny 'Download Template' button to get started, which will download a file called <b>progress.txt</b>. Make sure you know where on your computer it's downloaded to:</li>
+        <li>Click the shiny 'Download Template' button below to get started. This will download a file called <b>progress.txt</b>. Make sure you know where on your computer it's downloaded to:</li>
           <ul>
             <li>If you're on Windows it's most likely in the 'Downloads' folder.</li>
             <li>If you're on Mac or ChromeOS, I have no idea because I don't know how those filesystems work (sorry I am a bit useless).</li>
           </ul>
-        <li>Navigate to the subject you want (all subjects are found in the 'Subjects' section).</li>
+        <li>On the website, navigate to the subject you want (all subjects are found in the 'Subjects' section at the top).</li>
         <li>BEFORE YOU DO ANY CHECKBOX TICKING ensure you click the lovely 'Upload Progress' button and select your <b>progress.txt</b> file (downloaded in step 1). Once you've done this, checkbox tick to your heart's content.</li>
         <li>When you've finished with your checkbox-based shennanigans and you want to leave the site, please click the wonderful 'Save Progress' button. This will download a new file called <b>progress(1).txt</b>. Delete your old <b>progress.txt</b> file and rename the  <b>progress(1).txt</b> file to <b>progress.txt</b> so you don't get confused.</li>
         <li>When you come back to the site to continue checkbox-ticking, click the 'Upload Progress' button like before but select your <b>new</b> progress.txt file (the one you renamed) and your progress should appear on-screen.</li>
       </ol>
+
+      <div class="br"></div>
+
+      <div style="text-align:center"><button style="width:250px" onclick="downloadTemplate()">Download Template</button></div>
+
     </div>
   </body>
 </html>
