--- a/quickstart.html
+++ b/quickstart.html
@@ -23,8 +23,9 @@
         <li>PLEASE USE A COMPUTER - viewing this website on a phone looks awful and if you try and use the progress trackers it shouts at you.</li>
         <li>Click the shiny 'Download Template' button below to get started. This will download a file called <b>progress.txt</b>. Make sure you know where on your computer it's downloaded to:</li>
           <ul>
-            <li>If you're on Windows it's most likely in the 'Downloads' folder.</li>
-            <li>If you're on Mac or ChromeOS, I have no idea because I don't know how those filesystems work (sorry I am a bit useless).</li>
+            <li>If you're on Windows or Mac it's most likely in the 'Downloads' folder.</li>
+            <li>If you're on Linux it's in your ~/Downloads/ folder.</li>
+            <li>If you're ChromeOS, I have no idea because I don't know how those filesystems work (sorry I am a bit useless).</li>
           </ul>
         <li>On the website, navigate to the subject you want (all subjects are found in the 'Subjects' section at the top).</li>
         <li>BEFORE YOU DO ANY CHECKBOX TICKING ensure you click the lovely 'Upload Progress' button and select your <b>progress.txt</b> file (downloaded in step 1). Once you've done this, checkbox tick to your heart's content.</li>
