Changing biology to OCR

--- a/subjects.html
+++ b/subjects.html
@@ -20,12 +20,12 @@
     <div class="mainContent" style="text-align: center">
       <h1>MORE ON THE WAY</h1>
 
-      <!--<a href="subjects/biology.html">
+      <a href="subjects/biology.html">
         <div class="subject">
           <img src="images/biology.jpg" />
           <figcaption>Biology</figcaption>
         </div>
-      </a>-->
+      </a>
 
       <a href="subjects/chemistry.html">
         <div class="subject">
