--- a/subjects.html
+++ b/subjects.html
@@ -55,6 +55,13 @@
         </div>
       </a>
 
+      <a href="subjects/geography.html">
+        <div class="subject">
+          <img class="subject-image" src="images/geography.jpg" />
+          <figcaption>Geography</figcaption>
+        </div>
+      </a>
+
       <a href="subjects/maths.html">
         <div class="subject">
           <img class="subject-image" src="images/maths.jpg" />
