Updating geography links

--- a/subjects/geography.html
+++ b/subjects/geography.html
@@ -175,9 +175,9 @@
     <hr>
     <div style="text-align:center">
       <h2>Resources</h2>
-      <a target="_blank" href="https://www.ocr.org.uk/Images/171736-specification-accredited-a-level-gce-biology-a-h420.pdf" ><button>OCR Specification</button></a>
-      <a target="_blank" href="https://www.ocr.org.uk/qualifications/as-and-a-level/biology-a-h020-h420-from-2015/assessment/" ><button>OCR Past Papers</button></a>
-      <a target="_blank" href="https://www.physicsandmathstutor.com/biology-revision/a-level-ocr-a/" ><button>Physics and Maths Tutor</button></a>
+      <a target="_blank" href="https://qualifications.pearson.com/content/dam/pdf/A%20Level/Geography/2016/specification-and-sample-assessments/Pearson-Edexcel-GCE-A-level-Geography-specification-issue-5-FINAL.pdf" ><button>Edexcel Specification</button></a>
+      <a target="_blank" href="https://qualifications.pearson.com/en/qualifications/edexcel-a-levels/geography-2016.coursematerials.html#filterQuery=category:Pearson-UK:Category%2FSpecification-and-sample-assessments" ><button>Edexcel Past Papers</button></a>
+      <a target="_blank" href="https://www.physicsandmathstutor.com/geography-revision/a-level-edexcel/" ><button>Physics and Maths Tutor</button></a>
   </div>
 </div>
   <div class="footer"></div>
