--- a/quickstart.html
+++ b/quickstart.html
@@ -5,6 +5,7 @@
     <link href="images/Favicon.png" rel="shortcut icon">
     <title>Ross</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
     <base href="./">
   </head>
 
